--- a/templates/admin_template/add_course_template.html
+++ b/templates/admin_template/add_course_template.html
@@ -14,14 +14,14 @@
                         <h3 class="card-title">{{page_title}}</h3>
                     </div>
 
-                    <form method="post" role="form" enctype="multipart/form-data">
-                        <div class="row justify-content-md-center form-column">
+                    <form method="POST" enctype="multipart/form-data">
+                        <div class="card-body">
                             
-                            <div class="col col-md-9 col-12 form-add-course">
+                            <div class="form-group">
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Course ID:  </label>
-                                        <input type="number" name="ecourseid" class="form-control" required>
+                                        <input type="text" name="course_id" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -30,15 +30,7 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Instructor:  </label>
-                                        <select name="department_name" name="department_name">
-                                            <option value="lee">Lee</option>
-                                            <option value="don">Don</option>
-                                            <option value="alex">Alex</option>
-                                            <option value="peggy">Peggy</option>
-                                            <option value="betty">Betty</option>
-                                            <option value="peter">Peter</option>
-                                            <option value="alicia">Alicia</option>
-                                        </select>
+                                        <input type="text" name="instructor" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -47,7 +39,7 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Meeting Time:  </label>
-                                        <input type="text" name="meetingtime" class="form-control" required>
+                                        <input type="time" name="meeting_time" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +48,7 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Capacity:  </label>
-                                        <input type="text" name="capacity" class="form-control" required>
+                                        <input type="text" name="max_num_of_students" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +57,7 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Semester:  </label>
-                                        <input type="text" name="semester" class="form-control" required>
+                                        <input type="text" name="semester" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +66,7 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Semester Hours:  </label>
-                                        <input type="text" name="hours" class="form-control" required>
+                                        <input type="text" name="semester_hrs" class="form-control">
                                     </div>
                                 </div>
                             </div>
@@ -83,33 +75,16 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Registered No. of Students:  </label>
-                                        <input type="text" name="capacity" class="form-control" required>
+                                        <input type="text" name="registered_num_of_stud" class="form-control">
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col col-md-9 col-12">
-                                <div class="form-row form-add-course">
-                                    <div class="col-3 mb-3">
-                                        <label class="form-label">Department:  </label>
-                                        <select name="department_name" name="department_name">
-                                            <option value="computerscience">Computer Science</option>
-                                            <option value="informatics">Informatics</option>
-                                            <option value="datascience">Data Science</option>
-                                            <option value="dataanalytics">Data Analytics</option>
-                                            <option value="informationsystem">Information System</option>
-                                            <option value="quantitativefinance">Quantitative Finance</option>
-                                            <option value="softwereengineering">Softwere Engineering</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                
-                            <br>
+                        
                             {% csrf_token %}
-                            <div class="d-flex justify-content-around pt-2">
-                                <button class="btn btn-primary">Add</button>
-                            </div>
+                            
+                            <button type="submit" class="btn btn-primary mt-2">Add</button>
+                            
                         </div>
                     </form>
                 </div>
