--- a/templates/admin_template/add_advisor_template.html
+++ b/templates/admin_template/add_advisor_template.html
@@ -27,14 +27,14 @@
                         <h3 class="card-title">{{page_title}}</h3>
                     </div>
 
-                    <form method="post" action="/add_course" class="needs-validation" enctype="multipart/form-data" novalidate>
-                        <div class="row justify-content-md-center form-column">
+                    <form method="post" enctype="multipart/form-data">
+                        <div class="card-body">
                             
                             <div class="col col-md-9 col-12 form-add-course">
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Employee ID:  </label>
-                                        <input type="number" name="employeeid" class="form-control" required>
+                                        <input type="text" name="employee_id" class="form-control" required>
                                     </div>
                                 </div>
                             </div>
@@ -69,25 +69,15 @@
                                 <div class="form-row form-add-course">
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Department:  </label>
-                                        <select name="department_name" name="department_name">
-                                            <option value="computerscience">Computer Science</option>
-                                            <option value="informatics">Informatics</option>
-                                            <option value="datascience">Data Science</option>
-                                            <option value="dataanalytics">Data Analytics</option>
-                                            <option value="informationsystem">Information System</option>
-                                            <option value="quantitativefinance">Quantitative Finance</option>
-                                            <option value="softwereengineering">Softwere Engineering</option>
-                                        </select>
+                                        <input type="text" name="department" class="form-control" required>
                                     </div>
                                 </div>
                             </div>
                 
                             
-                            <br>
+                            
                             {% csrf_token %}
-                            <div class="d-flex justify-content-around pt-2">
-                                <button class="btn btn-primary">Add</button>
-                            </div>
+                            <button type="submit" class="btn btn-primary mt-2">Add</button>
                         </div>
                     </form>
                 </div>
