--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -30,7 +30,7 @@
                    class="list-group-item active">View Profile</a>
                 <a href="{% url 'course_registration' student_id=student.nuid %}"
                    class="list-group-item active">Registration</a>
-                <a href="{% url 'student_home' student.nuid %}"
+                <a href="{% url 'student_notification' student.nuid %}"
                    class="list-group-item active">View Notifications</a>
                 <a href="{% url 'course_drop' student_id=student.nuid %}"
                    class="list-group-item active">Drop Courses</a>
