--- a/templates/student/student_notification.html
+++ b/templates/student/student_notification.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
+<html>
+<title>Student Registration</title>
+<head>
+    <style>
+        #topBlackBar {
+            border-top: 50px solid #000;
+        }
+    </style>
+</head>
+<body>
+<div id="topBlackBar"/>
+</body>
+</html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Advisor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
+    <div class="row mt-2">
+        <div class="col-2">
+            <div class="list-group">
+                <a href="{% url 'student_home' data.student_id %}"
+                   class="list-group-item active">Home</a>
+                <a href="{% url 'student_profile' data.student_id %}"
+                   class="list-group-item active">View Profile</a>
+                <a href="{% url 'course_registration' student_id=data.student_id %}"
+                   class="list-group-item active">Registration</a>
+                <a href="{% url 'student_profile' data.student_id %}"
+                   class="list-group-item active">View Notifications</a>
+                <a href="{% url 'course_drop' student_id=data.student_id %}"
+                   class="list-group-item active">Drop Courses</a>
+                <a href="{% url 'degree_audit' student_id=data.student_id %}"
+                   class="list-group-item active">My Grades</a>
+                <a href="{% url 'student_list' %}"
+                   class="list-group-item active">Logout</a>
+            </div>
+        </div>
+        <div class="col-10">
+            <div class="bg-light rounded m-2">
+                <h4 class="border border-primary rounded p-2">Pending for approval</h4>
+                {% for c in data.pending_list %}
+                <p>{{c}}</p>
+                    <hr style="width:50%;text-align:left;margin-left:0">
+                {% endfor %}
+            </div>
+
+
+    </div>
+</div>
 
 </body>
 </html>
