solve the cursor

--- a/templates/advisor/advisor_index.html
+++ b/templates/advisor/advisor_index.html
@@ -43,8 +43,7 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=stuInfos.advisor_id %}" class="list-group-item active">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=stuInfos.advisor_id %}" class="list-group-item">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=stuInfos.advisor_id %}" class="list-group-item">My
-                    Students</a>
+                <a href="{% url 'advisor_students' advisor_id=stuInfos.advisor_id %}" class="list-group-item">My Students</a>
                 <a href="{% url 'advisor_profile' employee_id=stuInfos.advisor_id %}" class="list-group-item">Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=stuInfos.advisor_id %}" class="list-group-item">Search</a>
             </div>
