--- a/templates/advisor/advisor_search_details.html
+++ b/templates/advisor/advisor_search_details.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-10">
-            <div class="input-group">
+            <div class="input-group m-2">
                 <input id="search-nuid" type="search" class="form-control rounded" placeholder="Search with student nuid..."
                        aria-label="Search" aria-describedby="search-addon"/>
                 <button type="button" class="btn btn-outline-primary" onclick="setGetParameter()">search</button>
