--- a/templates/advisor/advisor_students.html
+++ b/templates/advisor/advisor_students.html
@@ -27,8 +27,7 @@
             <div class="list-group">
                 <a href="{% url 'advisor_statics' advisor_id=data.advisor_id %}" class="list-group-item">Statistics</a>
                 <a href="{% url 'advisor_requests' advisor_id=data.advisor_id %}" class="list-group-item">Requests</a>
-                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item active">My
-                    Students</a>
+                <a href="{% url 'advisor_students' advisor_id=data.advisor_id %}" class="list-group-item active">My Students</a>
                 <a href="{% url 'advisor_profile' employee_id=data.advisor_id %}" class="list-group-item">My Profile</a>
                 <a href="{% url 'advisor_search' advisor_id=data.advisor_id %}" class="list-group-item">Search</a>
             </div>
