--- a/templates/advisor/advisor_students.html
+++ b/templates/advisor/advisor_students.html
@@ -52,15 +52,15 @@
                     <input type="text" class="form-control" id="new-phone">
                 </div>
                 <div class="form-group">
-                    <label for="new-campus">Campus</label>
+                    <label for="new-campus">Campus ID</label>
                     <input type="text" class="form-control" id="new-campus">
                 </div>
                 <div class="form-group">
-                    <label for="new-department">Department</label>
+                    <label for="new-department">Department ID</label>
                     <input type="text" class="form-control" id="new-department">
                 </div>
                 <div class="form-group">
-                    <label for="new-college">College</label>
+                    <label for="new-college">College ID</label>
                     <input type="text" class="form-control" id="new-college">
                 </div>
                 <div class="form-group">
