Fix drop course

--- a/templates/student/drop_course.html
+++ b/templates/student/drop_course.html
@@ -43,8 +43,12 @@
         <div class="col-10">
             <div class="input-group">
                 <form action="" method="POST"> {%  csrf_token %}
+                    <h4 class="border border-primary rounded p-2">Course Currently Taking</h4>
+                    {% for c in data.course_taking %}
+                    <p>{{c}}</p>
+                    <hr style="height:2px;border-width:0;color:gray;background-color:gray">
+                    {% endfor %}
                     <h4 class="border border-primary rounded p-2">Drop Course</h4>
-                    <input type="text" class="field" placeholder="NUID" name="s_nuid">
                     <input type="text" class="field" placeholder="Couese Number" name="course_number">
                     <button type="submit" class="btn">Drop</button>
                 </form>
