--- a/templates/student/student_notification.html
+++ b/templates/student/student_notification.html
@@ -30,7 +30,7 @@
                    class="list-group-item active">View Profile</a>
                 <a href="{% url 'course_registration' student_id=data.student_id %}"
                    class="list-group-item active">Registration</a>
-                <a href="{% url 'student_profile' data.student_id %}"
+                <a href="{% url 'student_notification' data.student_id %}"
                    class="list-group-item active">View Notifications</a>
                 <a href="{% url 'course_drop' student_id=data.student_id %}"
                    class="list-group-item active">Drop Courses</a>
