add dropdown for choices in add a new stu

--- a/templates/advisor/advisor_students.html
+++ b/templates/advisor/advisor_students.html
@@ -51,18 +51,39 @@
                     <label for="new-phone">Phone</label>
                     <input type="text" class="form-control" id="new-phone">
                 </div>
-                <div class="form-group">
-                    <label for="new-campus">Campus ID</label>
-                    <input type="text" class="form-control" id="new-campus">
-                </div>
-                <div class="form-group">
-                    <label for="new-department">Department ID</label>
-                    <input type="text" class="form-control" id="new-department">
-                </div>
-                <div class="form-group">
-                    <label for="new-college">College ID</label>
-                    <input type="text" class="form-control" id="new-college">
-                </div>
+                <h4>Campus ID</h4>
+                <select id="new-campus" class="form-select">
+                    <option selected>Choose the campus ID</option>
+                    <option value="1">1 Silicon Valley</option>
+                    <option value="2">2 Seattle</option>
+                    <option value="3">3 Boston</option>
+                    <option value="4">4 Charlotte</option>
+                    <option value="5">5 San Francisco</option>
+                    <option value="6">6 Portland</option>
+                    <option value="7">7 Vancouver</option>
+                </select>
+                <h4>Department ID</h4>
+                <select id="new-department" class="form-select">
+                    <option selected>Choose the department ID</option>
+                    <option value="1">1 Computer Science</option>
+                    <option value="2">2 Informatics</option>
+                    <option value="3">3  Data Science</option>
+                    <option value="4">4 Data Analytics</option>
+                    <option value="5">5 Information System</option>
+                    <option value="6">6 Quantitative Finance</option>
+                    <option value="7">7 Softwere Engineering</option>
+                </select>
+                <h4>College ID</h4>
+                <select id="new-college" class="form-select">
+                    <option selected>Choose the college ID</option>
+                    <option value="12">12 Liberal art and sciences</option>
+                    <option value="13">13 Engineering</option>
+                    <option value="14">14 College of Science</option>
+                    <option value="15">15 D’Amore-McKim School of Business</option>
+                    <option value="16">16 Bouvé College of Health Sciences</option>
+                    <option value="17">17 School of Law</option>
+                    <option value="18">18 College of Professional Studies</option>
+                </select>
                 <div class="form-group">
                     <label for="new-email">Email address</label>
                     <input type="email" class="form-control" id="new-email" aria-describedby="emailHelp">
